<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/labelFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/filters"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />

    <TextView
        android:id="@+id/labelAgeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/age_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelFilter" />

    <TextView
        android:id="@+id/labelFamilialStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/familial_status"
        app:layout_constraintStart_toStartOf="@+id/labelAgeGroup"
        app:layout_constraintTop_toBottomOf="@+id/labelAgeGroup" />

    <TextView
        android:id="@+id/labelDisability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/disability"
        app:layout_constraintStart_toStartOf="@+id/labelFamilialStatus"
        app:layout_constraintTop_toBottomOf="@+id/labelFamilialStatus" />

    <TextView
        android:id="@+id/labelGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="@+id/labelDisability"
        app:layout_constraintTop_toBottomOf="@+id/labelDisability" />


    <TextView
        android:id="@+id/labelNumberOfDependencies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/current_balance"
        app:layout_constraintStart_toStartOf="@+id/labelGender"
        app:layout_constraintTop_toBottomOf="@+id/labelGender" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="labelAgeGroup,labelFamilialStatus,labelDisability,labelGender,labelNumberOfDependencies"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/ageGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:entries="@array/age_groups"
        app:layout_constraintBottom_toBottomOf="@+id/labelAgeGroup"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/labelAgeGroup" />

    <Spinner
        android:id="@+id/familialStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/familial_statuses"
        app:layout_constraintBottom_toBottomOf="@+id/labelFamilialStatus"
        app:layout_constraintStart_toStartOf="@+id/ageGroup"
        app:layout_constraintTop_toTopOf="@+id/labelFamilialStatus" />

    <Spinner
        android:id="@+id/disability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/disabilities"
        app:layout_constraintBottom_toBottomOf="@+id/labelDisability"
        app:layout_constraintStart_toStartOf="@+id/familialStatus"
        app:layout_constraintTop_toTopOf="@+id/labelDisability" />

    <Spinner
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/genders"
        app:layout_constraintBottom_toBottomOf="@+id/labelGender"
        app:layout_constraintStart_toStartOf="@+id/disability"
        app:layout_constraintTop_toTopOf="@+id/labelGender" />

    <Spinner
        android:id="@+id/numberOfDependencies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/number_of_dependencies"
        app:layout_constraintBottom_toBottomOf="@+id/labelNumberOfDependencies"
        app:layout_constraintStart_toStartOf="@+id/gender"
        app:layout_constraintTop_toTopOf="@+id/labelNumberOfDependencies" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNumberOfDependencies" />


</androidx.constraintlayout.widget.ConstraintLayout>